# ragged

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCSTRING_AUDIT_FINDINGS.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml  markdown-link-check-config.json
.github/workflows/: ci.yml  performance.yml
benchmarks/: v0.4.4-baseline.json
docs/: README.md
docs/adr/: 0001-local-only-processing.md  0002-pydantic-for-configuration.md  0003-chromadb-for-vector-storage.md  0004-factory-pattern-for-embedders.md
docs/assets/: README.md
docs/contributing/: README.md
docs/design/: README.md
docs/development/: README.md  ai-assistance.md  performance-baseline.md  time-tracking-methodology.md
docs/explanation/: README.md  architecture-overview.md  concepts.md  personas-explained.md  privacy-design.md  progressive-disclosure-explained.md  rag-for-users.md  rag-fundamentals.md  versioning-strategy.md
docs/guides/: README.md  configuration.md  docker-setup.md  faq.md  performance-tuning.md  security-guidelines.md
docs/implementation/: README.md
docs/reference/: README.md  configuration.md
docs/research/: README.md
docs/tutorials/: README.md  complete-beginners-guide.md  getting-started.md  installation.md  quickstart.md
examples/: README.md
examples/basic/: quickstart.md
examples/configs/: developer_config.yml  researcher_config.yml
examples/sample_documents/: rag_introduction.md
scripts/: README.md  baseline_performance.py  benchmark.py  start_all.sh  start_api.sh  start_ui.sh
scripts/dev/: format.sh  lint.sh  setup.sh  test.sh
scripts/maintenance/: migrate-config.py
scripts/manual_tests/: README.md  conftest.py  run_tests.py
src/: __init__.py  exceptions.py  main.py
src/chunking/: contextual.py  factory.py  hierarchical_chunker.py  semantic_chunker.py  splitters.py  token_counter.py
src/cli/: common.py  debug.py  formatters.py  interactive.py  themes.py  verbosity.py
src/config/: __init__.py  config_manager.py  constants.py  feature_flags.py  model_manager.py  personas.py  settings.py
src/core/: session.py
src/correction/: __init__.py  analyzer.py  corrector.py  metadata.py  pipeline.py  schemas.py
src/embeddings/: base.py  batch_tuner.py  colpali_embedder.py  factory.py  ollama_embedder.py  sentence_transformer.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/generation/: __init__.py  citation_formatter.py  confidence.py  few_shot.py  ollama_client.py  prompts.py  response_parser.py  suggestions.py
src/graph/: README.md
src/ingestion/: __init__.py  async_processor.py  backpressure.py  batch.py  loaders.py  models.py  scanner.py
src/memory/: README.md
src/monitoring/: __init__.py  metrics.py  profiler.py
src/personas/: README.md
src/plugins/: README.md  __init__.py  audit.py  consent.py  interfaces.py  loader.py  manager.py  permissions.py  rate_limiter.py  sandbox.py  validation.py
src/privacy/: __init__.py  gdpr.py  lifecycle.py  pii_detector.py
src/processing/: __init__.py  auto_tagger.py  base.py  docling_processor.py  factory.py  legacy_processor.py  metrics.py  model_manager.py  quality_assessor.py  router.py
src/retrieval/: __init__.py  bm25.py  cache.py  compression.py  fusion.py  hybrid.py  hyde.py  incremental_index.py  metadata_filter.py  query_decomposition.py  query_processor.py  reranker.py  retriever.py  vision_retriever.py
src/security/: __init__.py  encryption.py
src/storage/: __init__.py  chromadb_store.py  dual_store.py  metadata_serialiser.py  metadata_serializer.py  migration.py  schema.py  vector_store.py  vectorstore_factory.py  vectorstore_interface.py  version_tracker.py
src/templates/: __init__.py  engine.py
src/testing/: __init__.py  config_validator.py
src/utils/: adaptive_tuning.py  async_logging.py  benchmarks.py  circuit_breaker.py  cold_start.py  graceful_degradation.py  hashing.py  health.py  logging.py  metrics.py  multi_tier_cache.py  path_utils.py  resource_governor.py  retry.py  security.py  serialization.py  validation.py
src/vectorstore/: __init__.py  chromadb_store.py  exceptions.py  factory.py  interface.py  leann_store.py  platform.py
src/web/: api.py  gradio_ui.py  models.py
templates/: README.md
templates/examples/: simple_summary.j2
tests/: __init__.py  conftest.py  test_exceptions.py
tests/chunking/: test_chunking_integration.py  test_contextual.py  test_hierarchical_chunker.py  test_semantic_chunker.py  test_splitters.py  test_token_counter.py
tests/cli/: conftest.py  test_add.py  test_cache.py  test_completion.py  test_config.py  test_debug.py  test_docs.py  test_envinfo.py  test_evaluate.py  test_explain.py  test_export.py  test_formatters.py  test_health.py  test_history.py  test_interactive.py  test_metadata.py  test_query.py  test_search.py  test_serve.py  test_template_commands.py  test_test_commands.py  test_themes.py  test_validate.py  test_verbosity.py
tests/config/: test_config_manager.py  test_constants.py  test_feature_flags.py  test_model_manager.py  test_personas.py  test_settings.py
tests/correction/: __init__.py  test_analyzer.py  test_metadata.py  test_pipeline.py
tests/embeddings/: test_base.py  test_batch_tuner.py  test_factory.py
tests/evaluation/: test_ragas_evaluator.py
tests/generation/: test_citation_formatter.py  test_confidence.py  test_few_shot.py  test_ollama_client.py  test_response_parser.py  test_suggestions.py
tests/ingestion/: test_async_processor.py  test_backpressure.py  test_batch.py  test_loaders.py  test_models.py  test_scanner.py
tests/integration/: test_full_pipeline.py  test_multiformat.py  test_v0_3_5_correction_integration.py
tests/monitoring/: test_metrics.py  test_profiler.py
tests/performance/: README.md  __init__.py  baseline.json  baseline.py  test_baseline.py  test_regression.py
tests/plugins/: test_permissions.py
tests/privacy/: test_gdpr.py  test_lifecycle.py  test_pii_detector.py
(+740 files in other folders)
