[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragged"
version = "0.2.11"
description = "Privacy-first local RAG system for document question-answering"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "GPL-3.0"}
authors = [
    {name = "ragged contributors"}
]
keywords = ["rag", "llm", "retrieval", "embeddings", "local", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # v0.1 dependencies
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "chromadb>=0.4.18",
    "sentence-transformers>=2.2.2",
    "ollama>=0.1.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.1",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdown>=3.5.0",
    "trafilatura>=1.6.0",
    "python-json-logger>=2.0.7",
    "tiktoken>=0.5.0",
    "chardet>=5.2.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    # v0.2 new dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.8.0",
    "python-multipart>=0.0.6",
    "gradio>=4.9.0",
    "rank-bm25>=0.2.2",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    # v0.2.10/v0.2.11 security dependencies
    "cryptography>=41.0.0",  # Fernet encryption for query history, session data
    # v0.3.0 evaluation dependencies
    "ragas>=0.1.0",  # Apache 2.0 - RAGAS evaluation framework
    "datasets>=2.14.0",  # Apache 2.0 - Required by ragas
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ipython>=8.18.0",
    # Type stubs for mypy
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
ragged = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "S101",  # use of assert (allowed in tests)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "ollama.*",
    "pymupdf.*",
    "pymupdf4llm.*",
    "trafilatura.*",
    "tiktoken.*",
    "chardet.*",
    "gradio.*",
    "sse_starlette.*",
    "rank_bm25.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (medium speed)",
    "e2e: End-to-end tests (slow)",
    "web: Web UI tests",
    "retrieval: Retrieval system tests",
    "performance: Performance benchmarks",
    "slow: Slow-running tests",
    "requires_ollama: Tests requiring Ollama service",
    "requires_chromadb: Tests requiring ChromaDB service",
    # Security and Privacy markers (v0.2.10, v0.2.11)
    "security: Security hardening tests (v0.2.10)",
    "privacy: Privacy infrastructure tests (v0.2.11)",
    # Manual test markers
    "smoke: Quick sanity checks (5-10 min)",
    "feature: Tests for specific feature (use with argument, e.g., @pytest.mark.feature('cli'))",
    "version: Tests for specific version (use with argument, e.g., @pytest.mark.version('v0.2.9'))",
    "regression: Cross-version critical paths",
    "workflow: End-to-end user workflows",
    "interactive: Manual checklists (not automated)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
